fixed spacing and project page

--- a/css/style.scss
+++ b/css/style.scss
@@ -186,7 +186,7 @@ hr.resume-divider { margin: 0 0 8px 0; }
 .box-1 img {
   background-size: cover;
   height: 240px;
-  width: 260px;
+  width: 295px;
 }
 .projects-portfolio { color:#000000; }
 ul.post-list {
